ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
spec:
  ingressClassName: 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: 
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: 
            port:
              number: 80
